welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:11: error: '<-' expected but ')' found.
  for (i <= 1 to pas){
                    ^Methods:15: error: illegal start of simple expression
}
^